первая попытка после тестов

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,17 +3,14 @@
   и их переопределение под различные устройства
 */
 
-/* переменные для текста */
 :root {
+  /* переменные для текста */
   --main-font: IBM Plex Mono;
   --main-font-size: 18px;
-  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-font-size: clamp(7.25rem, calc(7.0115rem + 1.0178vw), 7.5rem);
   --bold-text-weight: 700;
   --thin-text-weight: 400;
-}
-
-/* переменные для цветов */
-:root {
+  /* переменные для цветов */
   --bg-color: #fff1f7;
   --bg-pic: url(../images/cover-image-light.png);
   --accent-color: #ff8dcb;
@@ -25,10 +22,7 @@
   --decor-zone-color: #000;
   --title-decor-text: #000;
   --main-title: #000;
-}
-
-/* переменные для отступов */
-:root {
+  /* переменные для отступов */
   --side-padding: 10px;
   --min-ind: 10px;
   --mid-ind: 20px;
