--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,10 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   color: var(--main-text-color);
-  font-family: var(--main-font), sans-serif;
+  font-family: var(--main-font), monospace;
   font-size: var(--main-font-size);
   font-weight: var(--thin-text-weight);
-  line-height: 23.4px;
+  line-height: 1.3em;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
@@ -16,7 +16,7 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  inline-size: 100vi;
+  inline-size: 100%;
 }
 
 .bold_text {
@@ -24,6 +24,7 @@
 }
 
 .header {
+  min-height: 668px;
   height: 100vh;
   width: 100vw;
   display: grid;
@@ -69,7 +70,7 @@
   font-weight: inherit;
 }
 
-.lamp {
+.rec::after {
   content: "";
   inline-size: calc(var(--main-font-size) / 2);
   block-size: calc(var(--main-font-size) / 2);
@@ -77,8 +78,8 @@
   background-color: var(--accent-color);
   box-shadow: 0 0 4px 2px var(--accent-color);
   position: absolute;
-  top: calc(var(--side-padding) + var(--main-font-size) / 2);
-  right: calc(var(--side-padding) + 18px - var(--min-ind));
+  top: calc(var(--main-font-size) / 2);
+  left: 43px;
 }
 
 .header__theme-menu {
@@ -105,24 +106,30 @@
   background-color: transparent;
   border: none;
   text-transform: lowercase;
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--button-text);
+  pointer-events: none;
+  outline: 1px solid var(--button-text);
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--button-hover);
+  outline: 1px solid var(--button-hover);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--button-focus);
+  outline: 1px solid var(--button-focus);
 }
 
 .header__title {
   grid-row: 2 / auto;
   font-size: var(--title-font-size);
-  line-height: 95.7px;
+  line-height: 0.825em;
   color: var(--title-text-color);
   text-shadow: 4px 4px 0 var(--accent-color);
   justify-self: start;
@@ -148,27 +155,24 @@
   color: var(--main-title);
 }
 
-.why,
-.what,
-.how {
+.main__section-type_one,
+.main__section-type_two {
   display: grid;
   grid-template-rows: min-content 1fr;
   gap: var(--mid-ind);
 }
 
-.why .main__subtitle,
-.what .main__subtitle,
-.how .main__subsubtitle {
+.main__subtitle,
+.main__subsubtitle {
   margin-block-end: var(--min-ind);
 }
 
-.how .main__subtitle {
+.main__subtitle-different-margin {
   margin-block-end: var(--mid-ind);
 }
 
-.why .main__text:not(:last-of-type),
-.what .what-block:not(:last-of-type),
-.how .main__text:not(:last-of-type) {
+.main__section-type_one .main__article-type-one:not(:last-of-type),
+.main__section-type_two .main__article-type-two:not(:last-of-type) {
   margin-block-end: var(--mid-ind);
 }
 
@@ -178,10 +182,14 @@
 }
 
 .main__link:hover {
-  text-decoration: underline;
+  border-block-end: 1px solid var(--main-text-color);
 }
 
 .main__link:focus {
+  outline: 1px solid var(--main-text-color);
+}
+
+.main__link:focus-visible {
   outline: 1px solid var(--main-text-color);
 }
 
@@ -197,6 +205,7 @@
 }
 
 .footer {
+  min-height: 668px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -206,13 +215,14 @@
 
 .footer__title {
   font-size: var(--title-font-size);
-  line-height: 95.7px;
+  line-height: 0.825em;
   color: var(--title-text-color);
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 @media (width >= 768px) {
   .header {
+    min-height: 1024px;
     padding-inline-start: 0;
     padding-inline-end: var(--side-padding);
   }
@@ -221,22 +231,21 @@
     inline-size: 50%;
   }
 
-  .why,
-  .how {
+  .main__section-type_one {
     grid-template-columns: 1fr 2fr;
   }
 
-  .what {
+  .main__section-type_two {
     grid-template-rows: min-content 1fr;
     grid-template-columns: min-content 1fr;
   }
 
-  .what .main__title {
+  .main__section-type_two .main__title {
     grid-row: 1/2;
     grid-column: 1/2;
   }
 
-  .what-text {
+  .main__text-block-type-two {
     grid-row: 2/3;
     grid-column: 1/3;
   }
@@ -280,10 +289,15 @@
     grid-row: 4/5;
     grid-column: 2/4;
   }
+
+  .footer {
+    min-height: 1024px;
+  }
 }
 
 @media (width >= 1024px) {
   .header {
+    min-height: 768px;
     padding-block-start: var(--side-padding);
   }
 
@@ -298,13 +312,17 @@
     flex-direction: row;
   }
 
-  .what {
+  .main__section-type_two {
     grid-template-columns: 1fr 2fr;
   }
 
-  .what-text {
+  .main__text-block-type-two {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: var(--mid-ind);
+  }
+
+  .footer {
+    min-height: 768px;
   }
 }
