--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 .header {
   min-height: 668px;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   justify-items: end;
@@ -92,12 +92,12 @@
 
 .header__theme-menu-list {
   display: flex;
-  gap: calc(var(--min-ind)+1.5px);
+  gap: var(--min-ind);
   flex-direction: column;
 }
 
 .header__theme-menu-button {
-  padding: 1.5px 13px;
+  padding: 2px 13px 4px; 
   font-size: inherit;
   font-family: inherit;
   color: var(--button-text);
@@ -128,7 +128,7 @@
 
 .header__title {
   grid-row: 2 / auto;
-  font-size: var(--title-font-size);
+  font-size: var(--title-font-size-mobile);
   line-height: 0.825em;
   color: var(--title-text-color);
   text-shadow: 4px 4px 0 var(--accent-color);
@@ -155,8 +155,7 @@
   color: var(--main-title);
 }
 
-.main__section-type_one,
-.main__section-type_two {
+.main__section {
   display: grid;
   grid-template-rows: min-content 1fr;
   gap: var(--mid-ind);
@@ -171,8 +170,7 @@
   margin-block-end: var(--mid-ind);
 }
 
-.main__section-type_one .main__article-type-one:not(:last-of-type),
-.main__section-type_two .main__article-type-two:not(:last-of-type) {
+.main__section .main__article:not(:last-of-type) {
   margin-block-end: var(--mid-ind);
 }
 
@@ -215,7 +213,7 @@
 }
 
 .footer__title {
-  font-size: var(--title-font-size);
+  font-size: var(--title-font-size-mobile);
   line-height: 0.825em;
   color: var(--title-text-color);
   text-shadow: 2px 2px 0 var(--accent-color);
@@ -228,28 +226,31 @@
     padding-inline-end: var(--side-padding);
   }
 
+  .header__title {
+    font-size: var(--title-font-size-desktop);
+  }
+
   .header__text-box {
     inline-size: 50%;
   }
 
-  .main__section-type_one {
+  .main__section {
     grid-template-columns: 1fr 2fr;
   }
 
-  .main__section-type_two {
+  .main__section-column {
     grid-template-rows: min-content 1fr;
-    grid-template-columns: min-content 1fr;
   }
 
-  .main__section-type_two .main__title {
+  .main__section-column .main__title {
     grid-row: 1/2;
     grid-column: 1/2;
   }
 
-  .main__text-block-type-two {
+  .main__text-block-column {
     grid-row: 2/3;
     grid-column: 1/3;
-  }
+  } 
 
   .gallery {
     grid-template-rows: repeat(4, min-content);
@@ -294,6 +295,10 @@
   .footer {
     min-height: 1024px;
   }
+
+  .footer__title {
+    font-size: var(--title-font-size-desktop);
+  }
 }
 
 @media (width >= 1024px) {
@@ -308,16 +313,10 @@
   }
 
   .header__theme-menu-list {
-    display: flex;
-    gap: var(--min-ind);
     flex-direction: row;
   }
 
-  .main__section-type_two {
-    grid-template-columns: 1fr 2fr;
-  }
-
-  .main__text-block-type-two {
+  .main__text-block-column {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: var(--mid-ind);
