--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,7 +7,8 @@
   /* переменные для текста */
   --main-font: 'IBM Plex Mono';
   --main-font-size: 18px;
-  --title-font-size: clamp(7.25rem, calc(7.0115rem + 1.0178vw), 7.5rem);
+  --title-font-size-mobile: clamp(7.25rem, calc(7.0115rem + 1.0178vw), 7.5rem);
+  --title-font-size-desktop: clamp(7.5rem, calc(0.5625rem + 14.4531vw), 9.8125rem); 
   --bold-text-weight: 700;
   --thin-text-weight: 400;
   /* переменные для цветов */
