--- a/styles/dark.css
+++ b/styles/dark.css
@@ -42,7 +42,7 @@
   }
 
   .gallery .main__title {
-    color: var(--title-decor-text)
+    color: var(--title-decor-text);
   }
 }
 
@@ -52,9 +52,8 @@
 
 .theme-dark .lamp {
   display: block;
-
 }
 
 .theme-dark .gallery .main__title {
-  color: var(--title-decor-text)
+  color: var(--title-decor-text);
 }
