--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,7 @@
     min-height: 1024px;
     padding-inline-start: 0;
     padding-inline-end: var(--side-padding);
+    padding-block-end: 183px;
   }
 
   .header__title {
@@ -236,6 +237,7 @@
 
   .main__section {
     grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
   }
 
   .main__section-column {
@@ -305,6 +307,7 @@
   .header {
     min-height: 768px;
     padding-block-start: var(--side-padding);
+    padding-block-end: 134px;
   }
 
   .header__theme-menu {
