--- a/styles/style.css
+++ b/styles/style.css
@@ -251,16 +251,16 @@
     grid-template-rows: 1fr;
   }
 
-  .main__section-column {
+  .main__section-what {
     grid-template-rows: min-content 1fr;
   }
 
-  .main__section-column .main__title {
+  .main__section-what .main__title {
     grid-row: 1/2;
     grid-column: 1/2;
   }
 
-  .main__text-block-column {
+  .main__text-block-what {
     grid-row: 2/3;
     grid-column: 1/3;
   }
@@ -335,7 +335,7 @@
     margin-block-start: 114px;
   }
 
-  .main__text-block-column {
+  .main__text-block-what {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: var(--mid-ind);
@@ -344,4 +344,30 @@
   .footer {
     min-height: 768px;
   }
+}
+
+@media (prefers-color-scheme: dark) {
+  .rec {
+    display: block;
+  }
+
+  .lamp {
+    display: block;
+  }
+
+  .gallery .main__title {
+    color: var(--title-decor-text);
+  }
+}
+
+.theme-dark .rec {
+  display: block;
+}
+
+.theme-dark .lamp {
+  display: block;
+}
+
+.theme-dark .gallery .main__title {
+  color: var(--title-decor-text);
 }
